--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
-  
+  <script src="https://cdn.ckeditor.com/4.8.0/standard/ckeditor.js"></script>
+
 </body>
 </html>
